--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
         "url": "https://github.com/BlackrockDigital/startbootstrap-business-casual.git"
     },
     "dependencies": {
-        "bootstrap": "4.2.1",
-        "jquery": "3.3.1"
+        "bootstrap": "^4.2.1",
+        "fstream": ">=1.0.12",
+        "jquery": "^3.4.1"
     },
     "devDependencies": {
-        "browser-sync": "2.26.3",
+        "browser-sync": "^2.26.5",
         "gulp": "4.0.0",
         "gulp-autoprefixer": "6.0.0",
         "gulp-clean-css": "4.0.0",
