--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "dependencies": {
         "bootstrap": "^4.2.1",
         "fstream": ">=1.0.12",
-        "jquery": "^3.4.1"
+        "jquery": "^3.4.1",
+        "axios": "^0.19.0"
     },
     "devDependencies": {
         "browser-sync": "^2.26.5",
